parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACE
    MINUS
    RBRACE

Grammar

Rule 0     S' -> input
Rule 1     input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER
Rule 2     variables -> VAR
Rule 3     variables -> variables COMMA VAR
Rule 4     actions -> ACT
Rule 5     actions -> actions COMMA ACT
Rule 6     rules -> rule
Rule 7     rules -> rules rule
Rule 8     rule -> LBRACK VAR COMMA ACT COMMA LPAREN variables RPAREN RBRACK
Rule 9     atom -> plusexpes GE NUMBER
Rule 10    exp -> VAR
Rule 11    exp -> NUMBER VAR
Rule 12    plusexpes -> exp
Rule 13    plusexpes -> plusexpes PLUS exp
Rule 14    formula -> atom
Rule 15    formula -> NOT formula
Rule 16    formula -> formula AND formula
Rule 17    formula -> formula OR formula
Rule 18    formula -> EA LPAREN ACT COMMA formula RPAREN
Rule 19    formula -> AA LPAREN ACT COMMA formula RPAREN
Rule 20    formula -> EG LPAREN formula RPAREN
Rule 21    formula -> AF LPAREN formula RPAREN
Rule 22    formula -> LPAREN formula RPAREN
Rule 23    eglogicformula -> formula

Terminals, with rules where they appear

AA                   : 19
ACT                  : 4 5 8 18 19
AF                   : 21
AND                  : 16
COMMA                : 3 5 8 8 18 19
EA                   : 18
EG                   : 20
GE                   : 9
LBRACE               : 
LBRACK               : 8
LPAREN               : 8 18 19 20 21 22
MINUS                : 
NOT                  : 15
NUMBER               : 1 9 11
OR                   : 17
PLUS                 : 13
RBRACE               : 
RBRACK               : 8
RPAREN               : 8 18 19 20 21 22
SEMICOLON            : 1 1 1 1 1
VAR                  : 1 2 3 8 10 11
error                : 

Nonterminals, with rules where they appear

actions              : 1 5
atom                 : 14
eglogicformula       : 1
exp                  : 12 13
formula              : 15 16 16 17 17 18 19 20 21 22 23
input                : 0
plusexpes            : 9 13
rule                 : 6 7
rules                : 1 7
variables            : 1 3 8

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> . variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER
    (2) variables -> . VAR
    (3) variables -> . variables COMMA VAR

    VAR             shift and go to state 3

    input                          shift and go to state 1
    variables                      shift and go to state 2

state 1

    (0) S' -> input .



state 2

    (1) input -> variables . SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER
    (3) variables -> variables . COMMA VAR

    SEMICOLON       shift and go to state 4
    COMMA           shift and go to state 5


state 3

    (2) variables -> VAR .

    SEMICOLON       reduce using rule 2 (variables -> VAR .)
    COMMA           reduce using rule 2 (variables -> VAR .)
    RPAREN          reduce using rule 2 (variables -> VAR .)


state 4

    (1) input -> variables SEMICOLON . actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER
    (4) actions -> . ACT
    (5) actions -> . actions COMMA ACT

    ACT             shift and go to state 7

    actions                        shift and go to state 6

state 5

    (3) variables -> variables COMMA . VAR

    VAR             shift and go to state 8


state 6

    (1) input -> variables SEMICOLON actions . SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER
    (5) actions -> actions . COMMA ACT

    SEMICOLON       shift and go to state 9
    COMMA           shift and go to state 10


state 7

    (4) actions -> ACT .

    SEMICOLON       reduce using rule 4 (actions -> ACT .)
    COMMA           reduce using rule 4 (actions -> ACT .)


state 8

    (3) variables -> variables COMMA VAR .

    SEMICOLON       reduce using rule 3 (variables -> variables COMMA VAR .)
    COMMA           reduce using rule 3 (variables -> variables COMMA VAR .)
    RPAREN          reduce using rule 3 (variables -> variables COMMA VAR .)


state 9

    (1) input -> variables SEMICOLON actions SEMICOLON . rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER
    (6) rules -> . rule
    (7) rules -> . rules rule
    (8) rule -> . LBRACK VAR COMMA ACT COMMA LPAREN variables RPAREN RBRACK

    LBRACK          shift and go to state 13

    rules                          shift and go to state 11
    rule                           shift and go to state 12

state 10

    (5) actions -> actions COMMA . ACT

    ACT             shift and go to state 14


state 11

    (1) input -> variables SEMICOLON actions SEMICOLON rules . SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER
    (7) rules -> rules . rule
    (8) rule -> . LBRACK VAR COMMA ACT COMMA LPAREN variables RPAREN RBRACK

    SEMICOLON       shift and go to state 15
    LBRACK          shift and go to state 13

    rule                           shift and go to state 16

state 12

    (6) rules -> rule .

    SEMICOLON       reduce using rule 6 (rules -> rule .)
    LBRACK          reduce using rule 6 (rules -> rule .)


state 13

    (8) rule -> LBRACK . VAR COMMA ACT COMMA LPAREN variables RPAREN RBRACK

    VAR             shift and go to state 17


state 14

    (5) actions -> actions COMMA ACT .

    SEMICOLON       reduce using rule 5 (actions -> actions COMMA ACT .)
    COMMA           reduce using rule 5 (actions -> actions COMMA ACT .)


state 15

    (1) input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON . VAR SEMICOLON eglogicformula SEMICOLON NUMBER

    VAR             shift and go to state 18


state 16

    (7) rules -> rules rule .

    SEMICOLON       reduce using rule 7 (rules -> rules rule .)
    LBRACK          reduce using rule 7 (rules -> rules rule .)


state 17

    (8) rule -> LBRACK VAR . COMMA ACT COMMA LPAREN variables RPAREN RBRACK

    COMMA           shift and go to state 19


state 18

    (1) input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR . SEMICOLON eglogicformula SEMICOLON NUMBER

    SEMICOLON       shift and go to state 20


state 19

    (8) rule -> LBRACK VAR COMMA . ACT COMMA LPAREN variables RPAREN RBRACK

    ACT             shift and go to state 21


state 20

    (1) input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON . eglogicformula SEMICOLON NUMBER
    (23) eglogicformula -> . formula
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    eglogicformula                 shift and go to state 23
    formula                        shift and go to state 25
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 21

    (8) rule -> LBRACK VAR COMMA ACT . COMMA LPAREN variables RPAREN RBRACK

    COMMA           shift and go to state 35


state 22

    (10) exp -> VAR .

    GE              reduce using rule 10 (exp -> VAR .)
    PLUS            reduce using rule 10 (exp -> VAR .)


state 23

    (1) input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula . SEMICOLON NUMBER

    SEMICOLON       shift and go to state 36


state 24

    (11) exp -> NUMBER . VAR

    VAR             shift and go to state 37


state 25

    (23) eglogicformula -> formula .
    (16) formula -> formula . AND formula
    (17) formula -> formula . OR formula

    SEMICOLON       reduce using rule 23 (eglogicformula -> formula .)
    AND             shift and go to state 38
    OR              shift and go to state 39


state 26

    (14) formula -> atom .

    AND             reduce using rule 14 (formula -> atom .)
    OR              reduce using rule 14 (formula -> atom .)
    SEMICOLON       reduce using rule 14 (formula -> atom .)
    RPAREN          reduce using rule 14 (formula -> atom .)


state 27

    (15) formula -> NOT . formula
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 40
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 28

    (18) formula -> EA . LPAREN ACT COMMA formula RPAREN

    LPAREN          shift and go to state 41


state 29

    (22) formula -> LPAREN . formula RPAREN
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 42
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 30

    (19) formula -> AA . LPAREN ACT COMMA formula RPAREN

    LPAREN          shift and go to state 43


state 31

    (20) formula -> EG . LPAREN formula RPAREN

    LPAREN          shift and go to state 44


state 32

    (21) formula -> AF . LPAREN formula RPAREN

    LPAREN          shift and go to state 45


state 33

    (9) atom -> plusexpes . GE NUMBER
    (13) plusexpes -> plusexpes . PLUS exp

    GE              shift and go to state 46
    PLUS            shift and go to state 47


state 34

    (12) plusexpes -> exp .

    GE              reduce using rule 12 (plusexpes -> exp .)
    PLUS            reduce using rule 12 (plusexpes -> exp .)


state 35

    (8) rule -> LBRACK VAR COMMA ACT COMMA . LPAREN variables RPAREN RBRACK

    LPAREN          shift and go to state 48


state 36

    (1) input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON . NUMBER

    NUMBER          shift and go to state 49


state 37

    (11) exp -> NUMBER VAR .

    GE              reduce using rule 11 (exp -> NUMBER VAR .)
    PLUS            reduce using rule 11 (exp -> NUMBER VAR .)


state 38

    (16) formula -> formula AND . formula
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 50
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 39

    (17) formula -> formula OR . formula
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 51
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 40

    (15) formula -> NOT formula .
    (16) formula -> formula . AND formula
    (17) formula -> formula . OR formula

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    SEMICOLON       reduce using rule 15 (formula -> NOT formula .)
    RPAREN          reduce using rule 15 (formula -> NOT formula .)
    AND             shift and go to state 38
    OR              shift and go to state 39

  ! AND             [ reduce using rule 15 (formula -> NOT formula .) ]
  ! OR              [ reduce using rule 15 (formula -> NOT formula .) ]


state 41

    (18) formula -> EA LPAREN . ACT COMMA formula RPAREN

    ACT             shift and go to state 52


state 42

    (22) formula -> LPAREN formula . RPAREN
    (16) formula -> formula . AND formula
    (17) formula -> formula . OR formula

    RPAREN          shift and go to state 53
    AND             shift and go to state 38
    OR              shift and go to state 39


state 43

    (19) formula -> AA LPAREN . ACT COMMA formula RPAREN

    ACT             shift and go to state 54


state 44

    (20) formula -> EG LPAREN . formula RPAREN
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 55
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 45

    (21) formula -> AF LPAREN . formula RPAREN
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 56
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 46

    (9) atom -> plusexpes GE . NUMBER

    NUMBER          shift and go to state 57


state 47

    (13) plusexpes -> plusexpes PLUS . exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    exp                            shift and go to state 58

state 48

    (8) rule -> LBRACK VAR COMMA ACT COMMA LPAREN . variables RPAREN RBRACK
    (2) variables -> . VAR
    (3) variables -> . variables COMMA VAR

    VAR             shift and go to state 3

    variables                      shift and go to state 59

state 49

    (1) input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER .

    $end            reduce using rule 1 (input -> variables SEMICOLON actions SEMICOLON rules SEMICOLON VAR SEMICOLON eglogicformula SEMICOLON NUMBER .)


state 50

    (16) formula -> formula AND formula .
    (16) formula -> formula . AND formula
    (17) formula -> formula . OR formula

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    SEMICOLON       reduce using rule 16 (formula -> formula AND formula .)
    RPAREN          reduce using rule 16 (formula -> formula AND formula .)
    AND             shift and go to state 38
    OR              shift and go to state 39

  ! AND             [ reduce using rule 16 (formula -> formula AND formula .) ]
  ! OR              [ reduce using rule 16 (formula -> formula AND formula .) ]


state 51

    (17) formula -> formula OR formula .
    (16) formula -> formula . AND formula
    (17) formula -> formula . OR formula

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    SEMICOLON       reduce using rule 17 (formula -> formula OR formula .)
    RPAREN          reduce using rule 17 (formula -> formula OR formula .)
    AND             shift and go to state 38
    OR              shift and go to state 39

  ! AND             [ reduce using rule 17 (formula -> formula OR formula .) ]
  ! OR              [ reduce using rule 17 (formula -> formula OR formula .) ]


state 52

    (18) formula -> EA LPAREN ACT . COMMA formula RPAREN

    COMMA           shift and go to state 60


state 53

    (22) formula -> LPAREN formula RPAREN .

    AND             reduce using rule 22 (formula -> LPAREN formula RPAREN .)
    OR              reduce using rule 22 (formula -> LPAREN formula RPAREN .)
    SEMICOLON       reduce using rule 22 (formula -> LPAREN formula RPAREN .)
    RPAREN          reduce using rule 22 (formula -> LPAREN formula RPAREN .)


state 54

    (19) formula -> AA LPAREN ACT . COMMA formula RPAREN

    COMMA           shift and go to state 61


state 55

    (20) formula -> EG LPAREN formula . RPAREN
    (16) formula -> formula . AND formula
    (17) formula -> formula . OR formula

    RPAREN          shift and go to state 62
    AND             shift and go to state 38
    OR              shift and go to state 39


state 56

    (21) formula -> AF LPAREN formula . RPAREN
    (16) formula -> formula . AND formula
    (17) formula -> formula . OR formula

    RPAREN          shift and go to state 63
    AND             shift and go to state 38
    OR              shift and go to state 39


state 57

    (9) atom -> plusexpes GE NUMBER .

    AND             reduce using rule 9 (atom -> plusexpes GE NUMBER .)
    OR              reduce using rule 9 (atom -> plusexpes GE NUMBER .)
    SEMICOLON       reduce using rule 9 (atom -> plusexpes GE NUMBER .)
    RPAREN          reduce using rule 9 (atom -> plusexpes GE NUMBER .)


state 58

    (13) plusexpes -> plusexpes PLUS exp .

    GE              reduce using rule 13 (plusexpes -> plusexpes PLUS exp .)
    PLUS            reduce using rule 13 (plusexpes -> plusexpes PLUS exp .)


state 59

    (8) rule -> LBRACK VAR COMMA ACT COMMA LPAREN variables . RPAREN RBRACK
    (3) variables -> variables . COMMA VAR

    RPAREN          shift and go to state 64
    COMMA           shift and go to state 5


state 60

    (18) formula -> EA LPAREN ACT COMMA . formula RPAREN
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 65
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 61

    (19) formula -> AA LPAREN ACT COMMA . formula RPAREN
    (14) formula -> . atom
    (15) formula -> . NOT formula
    (16) formula -> . formula AND formula
    (17) formula -> . formula OR formula
    (18) formula -> . EA LPAREN ACT COMMA formula RPAREN
    (19) formula -> . AA LPAREN ACT COMMA formula RPAREN
    (20) formula -> . EG LPAREN formula RPAREN
    (21) formula -> . AF LPAREN formula RPAREN
    (22) formula -> . LPAREN formula RPAREN
    (9) atom -> . plusexpes GE NUMBER
    (12) plusexpes -> . exp
    (13) plusexpes -> . plusexpes PLUS exp
    (10) exp -> . VAR
    (11) exp -> . NUMBER VAR

    NOT             shift and go to state 27
    EA              shift and go to state 28
    AA              shift and go to state 30
    EG              shift and go to state 31
    AF              shift and go to state 32
    LPAREN          shift and go to state 29
    VAR             shift and go to state 22
    NUMBER          shift and go to state 24

    formula                        shift and go to state 66
    atom                           shift and go to state 26
    plusexpes                      shift and go to state 33
    exp                            shift and go to state 34

state 62

    (20) formula -> EG LPAREN formula RPAREN .

    AND             reduce using rule 20 (formula -> EG LPAREN formula RPAREN .)
    OR              reduce using rule 20 (formula -> EG LPAREN formula RPAREN .)
    SEMICOLON       reduce using rule 20 (formula -> EG LPAREN formula RPAREN .)
    RPAREN          reduce using rule 20 (formula -> EG LPAREN formula RPAREN .)


state 63

    (21) formula -> AF LPAREN formula RPAREN .

    AND             reduce using rule 21 (formula -> AF LPAREN formula RPAREN .)
    OR              reduce using rule 21 (formula -> AF LPAREN formula RPAREN .)
    SEMICOLON       reduce using rule 21 (formula -> AF LPAREN formula RPAREN .)
    RPAREN          reduce using rule 21 (formula -> AF LPAREN formula RPAREN .)


state 64

    (8) rule -> LBRACK VAR COMMA ACT COMMA LPAREN variables RPAREN . RBRACK
